@@ -16,6 +16,7 @@ Bug fixes:
 * ClearScreen now just clears the visible screen, not the entire buffer.
 * Fix exception on error input during rendering after certain keywords like process, begin, or end.
 * Fix exception after undo from menu completion
+* Support CancelLine (Ctrl+C) and Abort (Ctrl+G in emacs) to cancel DigitArgument
 
 New functions:
 * ValidateAndAcceptLine
